优化代码, 修复累积bug， 修复无法创建服务的问题。
Commit by Andy.Zhang
Email: ztao8607@gmail.com
