# model/metadata/mongo.go
@@ -7,20 +7,35 @@ import (
 )
 
 type MetaData struct {
-	ID     bson.ObjectId `json:"id,omitempty" bson:"_id,omitempty"`
-	Sid    string        `json:"secret_id"`
-	Skey   string        `json:"secret_key"`
-	Region string        `json:"region"`
+	ID        bson.ObjectId `json:"id,omitempty" bson:"_id,omitempty"`
+	Sid       string        `json:"secret_id"`
+	Skey      string        `json:"secret_key"`
+	Region    string        `json:"region"`
+	ClusterID string        `json:"cluster_id"`
 }
 
 // GetMetaDataByRegion 查询指定区域的元数据
+// 如果region为空， 则默认输出第一条MetaData数据
 func GetMetaDataByRegion(region string) (md *MetaData, err error) {
+
+	if region == "" {
+		imds, err := mongo.FindAllMetaData()
+		if err != nil {
+			return nil, err
+		}
+		md, err = unmarshal(imds[0])
+		if err != nil {
+			return nil, err
+		}
+		return md, nil
+	}
+
 	imd, err := mongo.FindMetaDataByRegion(region)
 	if err != nil {
 		if tool.IsNotFound(err) {
 			md = new(MetaData)
 			err = nil
-			return
+			return nil, err
 		}
 		return
 	}
@@ -34,13 +49,13 @@ func DelteMetaData(md MetaData) (err error) {
 	return
 }
 
-func DeleteMetaDataByRegion(region string) (err error){
+func DeleteMetaDataByRegion(region string) (err error) {
 	md, err := GetMetaDataByRegion(region)
-	if err != nil{
+	if err != nil {
 		return
 	}
 
-	if md.ID == ""{
+	if md.ID == "" {
 		return
 	}
 
@@ -48,7 +63,7 @@ func DeleteMetaDataByRegion(region string) (err error){
 	return
 }
 
-func SaveMetaData(md MetaData) error{
+func SaveMetaData(md MetaData) error {
 	return mongo.SaveMetaData(md)
 }
 
